# DevSpace

./: .gitignore  .gitleaks.toml  README.md  RELEASE-v1.1.1.md  package-lock.json  package.json
backend/: app.py  requirements.txt
backend/core/: database.py  platform_compat.py  pty_session.py  session_manager.py
backend/routes/: api_token_routes.py  auth_routes.py  chat_helpers.py  chat_routes.py  code_workspace_routes.py  codex_routes.py  knowledge_base_routes.py  lsp_routes.py  model_routes.py  research_routes.py  research_sources_routes.py  shell_routes.py  skills_routes.py  workspace_routes.py
backend/specs/: architecture-runtime-inventory.md
backend/src/: action_intents.py  agent_harness.py  agent_loop.py  agent_runs.py  chat_helpers.py  chat_processor.py  chroma_client.py  config.py  constants.py  deep_research.py  embedding_lanes.py  endpoint_resolver.py  generated_images.py  llm_core.py  lsp_bridge.py  model_discovery.py  model_media.py  output_summarizer.py  rag_vector.py  secret_storage.py  settings.py  task_scheduler.py  tool_execution.py  tool_implementations.py  tool_index.py  tool_parsing.py  tool_policy.py  tool_schemas.py  webhook_manager.py  workspace_checkpoints.py
backend/static/: app.js  index.html  login.html  manifest.json  style.css  sw.js
backend/tests/: test_action_intents.py  test_agent_auto_continue.py  test_agent_edit_verify_enforce_setting.py  test_agent_migration_manifest.py  (+38 more)
design/: bubble-preview.html  deep-research-ui-proposals.html  mark-options.html
docs/: APPLICATION_OVERVIEW.md  HANDOFF.md  audit-2026-06-26.md  code-workspace-lsp-smoke-test.md  code-workspace-plan.md  issue-2-knowledge-sources-detailed-plan.md  issue-2-knowledge-sources-plan.md  phase2-decisions.md
scripts/: build_installer.ps1  sync-backend-resources.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
(+70 files in other folders)
